fix: modif du modal Passager Confirmé
